style.css
html, body {
    scroll-behavior:smooth;
    padding:0; 
    margin:0; 
    height:100%;
}

h2 {
    font-size: 32px;
}

body {
    background-color: #d6d8c2e5;
    font-family: monospace;
    font-size: 20px; 
}

/* nav bar styling */

@media only screen and (max-width: 560px) {
    nav ul {
        display: none;
    }
}

nav {
    background-color: #000000;
    color: white;
    height: 90px;
    width: 100%;
    display: inline-block;
    position: fixed;
    z-index: 3;
}

nav ul {
    position: absolute;
    right: 0px;
    top: 30px;
}

nav li {
    display: inline;
    font-size: 25px;
    margin: 30px;
}

nav img {
    display: inline;
    padding-left: 20px;
    padding-top: 15px;
}

nav a {
    text-decoration: none;
    color: inherit;
}

/* header styling */

header {
    color: white;
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(./media/marc-pell-oWRVjFQIwAY-unsplash.jpg);
    background-size: cover;
    padding-bottom: 200px !important;
    height: auto;
}

h1 {
    padding-top: 200px !important;
    text-align: center;
    font-size: 60px;
}

#typewriter {
    display: flex;
    justify-content: center;
    font-size: 32px;
    margin-top: 20px;
}

#app {
    margin-left: 14px
}

/* About section */

@media only screen and (max-width: 950px) {
    #about {
        width: 100% !important
    }
}

#about {
    width: 70%;
    line-height: 28px;
    margin: auto;
    margin-top: 40px;
    justify-content: center;
    display: flex;
}

#about-info {
    margin: auto 0px;
    min-width: 200px;   
    width: 50%;
}

#about p {
    margin-top: 50px
}

#about figure {
    display: inline;
    text-align: center;
    margin-left: 40px;
    margin: auto 0px;
    width: 50%;
}

#about figure img {
    margin-top: 10%;
    width: 80%
}

#sns {
    margin-top: 50px;
    text-align: center;

}

#sns img {
    margin: 30px;
}

/* Tech Showcase Section */
#technologies {
    margin: 50px auto;
    text-align: center;
}

#tech-showcase {
    display: inline-flex;
    flex-wrap: wrap;
    margin-top: 40px;
    justify-content: center;
}

.tech {
    margin: 20px;
}

/* Projects */

#projects {
    margin: 0px auto;
    width: 70%;
    display: block;
}

.project {
    margin: 50px 0px;
    display: inline-flex;
    line-height: 28px;
}

.project p {
    width: 100%;
    margin: 30px 0px;
} 

.preview-images {
    position: relative;
    right: 0px;
    height: 100%;
    width: 60%;
    margin-left: 20px;
}

/* Contact */

#contact {
    margin-top: 100px !important;
    width: 40%;
    line-height: 28px;
    margin: auto;
    margin-bottom: 100px;
}

#contact p {
    margin-top: 20px;
}

/* Footer */

footer {
    text-align: center;
    position: static;
    bottom: 0;
    height: 100px;
    width: 100%;
    background-color: black;
    color: white;
}

footer #footer-text {
    display: inline-block;
    margin-top: 30px
}

